# smart-robot-inspector

./: .gitignore  GAZEBO_QUICKSTART.md  GETTING_STARTED.md  INDEX.md  INSTALL_DEPENDENCIES.sh  PHASE3_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README_FIRST.txt  SETUP_GUIDE.md  requirements-ros2.txt  requirements.txt  run_demo_simple.sh  run_gazebo_demo.sh  setup_environment.sh  spawn_robot.sh
robot_inspector/: EXAMPLES.md  README.md  README_ROS2.md  SETUP_GUIDE.md  demo_standalone.py  package.xml  requirements.txt  setup.cfg  setup.py
robot_inspector/config/: gazebo_params.yaml  gazebo_warehouse.rviz  inspector_config.yaml
robot_inspector/docs/: GAZEBO_SETUP.md
robot_inspector/launch/: gazebo_warehouse.launch.py  gazebo_warehouse_with_viz.launch.py  inspector.launch.py
robot_inspector/models/mobile_robot/: model.sdf
robot_inspector/reports/: inspection_demo_2026_04_03_001.html  inspection_demo_2026_04_03_001.json  inspection_demo_2026_04_03_001.md
robot_inspector/robot_inspector/: __init__.py  camera_processor.py  inspection_message.py  llm_provider.py  report_generator.py  ros_node.py  utils.py
robot_inspector/scripts/: gazebo_utils.py  run_gazebo_demo.py  run_ros_node.py
robot_inspector/test_reports/: inspection_phase2_test_001.md
robot_inspector/worlds/: warehouse.world
