<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_inspector</name>
  <version>0.2.0</version>
  <description>ROS2 intelligent robot inspector with Claude AI vision capabilities</description>
  <maintainer email="manoj@example.com">z-manoj</maintainer>
  <author email="manoj@example.com">z-manoj</author>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Python package dependencies -->
  <exec_depend>python3-boto3</exec_depend>
  <exec_depend>python3-pillow</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pyyaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- Launch and testing -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
</package>
